# cv

./: .gitignore  Cargo.toml  Trunk.toml  gregory-carnegie-cv.html  index.html  index_5.html
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
assets/: site.webmanifest
js/: scroll-reveal.js
src/: app.rs  commands.rs  main.rs
src/components/: contact_bar.rs  education.rs  experience.rs  footer.rs  hero.rs  interests.rs  mod.rs  nav.rs  projects.rs  skills.rs
style/: main.css
