[package]
name = "cv"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3.97"
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"

[dependencies.web-sys]
version = "0.3.97"
features = [
  "Element",
  "HtmlInputElement",
  "Window",
]
